# pixel_vault

./: .env_example  .gitignore  .pytest_env  Makefile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflow/: lint.yml
.github/workflows/: test.yml
apps/core/tests/: test_genre.py
apps/feedback/: admin.py  models.py
apps/feedback/migrations/: 0001_initial.py  0002_rating_submitted_review.py  0003_alter_rating_submitted_review.py
apps/feedback/tests/: test_models.py
apps/games/: admin.py  choices.py  models.py  urls.py  views.py
apps/games/migrations/: 0001_initial.py  0002_rename_system_requirements_systemrequirements.py  0003_rename_systemrequirements_systemrequirement.py  0004_game_pegi_rating_game_publisher_and_more.py  0005_alter_game_long_description_alter_game_pegi_rating_and_more.py  0006_game_developer.py  0007_game_platform.py  0008_game_genres.py  0009_game_features.py  0010_game_badges.py  0011_alter_game_pegi_rating.py  0012_alter_game_badges.py  0013_alter_game_badges.py  0014_systemrequirement_graphics.py  0015_fix_attribute_names.py  0016_remove_systemrequirement_memory_and_more.py  0017_rename_memorys_systemrequirement_memory_mb.py  0018_rename_storage_systemrequirement_storage_mb.py  0019_alter_game_long_description_alter_game_photo_and_more.py  (+5 more)
apps/interactions/: admin.py  models.py
apps/misc/: admin.py  choices.py  models.py
config/: settings.py  urls.py
fixtures/factories/: __init__.py  core.py  feedback.py  games.py  interactions.py  misc.py  rating.py  session.py
(+37 files in other folders)
